daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N13_bad_kem_key_id/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a7636584098904ce2635eaa3f416ecc1ef9fc0a019f333b1f63b8a126578912c4c57a55013cc0e6486487257413f192b47d4cb4c58332291181a0448781a63c93a8fe5b79
